[tool.poetry]
name = "helloworld"
version = "0.1.1"
description = ""
authors = ["Unknown"]
maintainers = ["Wilbert Iglesias <wiglesias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
